# bookformat-reference

./: .semgrep.yml  AGENT_RULES.md  AGENT_WORKFLOW.md  BOOKFORMAT_SPEC.md  PRODUCTION_STANDARDS.md  Prd  README.md  SUMMARY.md  SYSTEM_GRAPH.md  book_core.py  librarian.py  pyproject.toml
.bpolicy/: AGENTS.md  HOW_TO_ADOPT.md  REALTIME_BENEFITS.md  book_core.py  librarian.py
examples/: agent_architecture.py  security_critical.py  vibe_coding_demo.py
inventory_sync/: foundations.py  retry.py
